applications/gitea/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea
  namespace: gitea
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "gitea.jvos.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gitea-http
          namespace: gitea
          port: 3000
          weight: 1
